# datasus-epi

./: .gitignore  README.md  app.py  main.py  pyproject.toml  test.ipynb  test.py  verify_spatial_update.py
.ipynb_checkpoints/: test-checkpoint.ipynb
api/analysis/: spatial.py
api/analysis/.ipynb_checkpoints/: trends-checkpoint.py
api/sim/: config.py
api/sim/stats/: utils.py
api/sinasc/: config.py  derive.py  dictionaries.py  indicadores.py  load.py  taxas.py  tempo.py
api/viz/: maps.py
datasus_epi/analysis/: spatial.py  trends.py
datasus_epi/sinasc/: __init__.py  aggregate.py  derive.py  dictionaries.py  indicadores.py  taxas.py  tempo.py
datasus_epi/viz/: maps.py  trends.py
inspo/: Demonstração_Quadros_de_Saúde.ipynb  dicionario_sim.md  main copy.ipynb  main.ipynb  prd.md
scripts/: analise_bayesiana.py  analise_espacial.py  analise_tendencia.py  config.py  derivacoes.py  dicionarios.py  docs.txt  indicadores.py  io.py  taxas.py  tempo.py  visualizacao.py
