[project]
name = "maformacoes-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dbfread>=2.0.7",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "quadrosdesaude>=0.1.6",
    "tqdm>=4.67.1",
]
